[metadata]
name = Thin-Deployer
author = Marek Andrzejczak
author_email = marek_andrzejczak@riseup.net
summary = Webhook handler that can be used to deploy on push for example
license = LGPLv3
description-file =
    README.md
home-page = https://github.com/Wolnosciowiec/thin-deployer
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: Software Development :: Version Control
    Topic :: System :: Systems Administration

[files]
packages = thindeployer
data_files =
    /etc/thin-deployer/ = ./tests/.deployer.yml

[entry_points]
console_scripts =
    thin-deployer = thindeployer:run_application
